--- a/demo/index.html
+++ b/demo/index.html
@@ -1,37 +1,70 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>cells-training-card-dm demo</title>
-    <script src="../build/webcomponents-loader.js"></script>
-    <script src="../build/scoping-ambients-shim.min.js"></script>
-    <script src="../build/custom-style-interface.min.js"></script>
-    <script>
-      {
-        const _customElementsDefine = window.customElements.define;
-        window.customElements.define = (name, cl, conf) => {
-          if (customElements.get(name)) {
-            console.warn(`${name} has been defined twice`);
-          } else {
-            _customElementsDefine.call(window.customElements, name, cl, conf);
-          }
-        };
-      }
-    </script>
-    <script defer src="../build/component.js"></script>
-    <script type="module" crossorigin="use-credentials">
-      import '../build/demo-build.js';
-    </script>
-  </head>
 
-  <body>
-    <bbva-core-demo-helper>
-      <bbva-core-demo-case heading="Basic" description="Default specs">
-        <template>
-          <cells-training-card-dm></cells-training-card-dm>
-        </template>
-      </bbva-core-demo-case>
-    </bbva-core-demo-helper>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>cells-training-card-dm demo</title>
+  <script src="../build/webcomponents-loader.js"></script>
+  <script src="../build/scoping-ambients-shim.min.js"></script>
+  <script src="../build/custom-style-interface.min.js"></script>
+  <script>
+    {
+      const _customElementsDefine = window.customElements.define;
+      window.customElements.define = (name, cl, conf) => {
+        if (customElements.get(name)) {
+          console.warn(`${name} has been defined twice`);
+        } else {
+          _customElementsDefine.call(window.customElements, name, cl, conf);
+        }
+      };
+    }
+  </script>
+  <script defer src="../build/component.js"></script>
+  <script type="module" crossorigin="use-credentials">
+    import '../build/demo-build.js';
+  </script>
+</head>
+
+<body>
+  <bbva-core-demo-helper>
+    <bbva-core-demo-case heading="Basic" description="Default specs">
+      <template>
+        <cells-training-card-dm></cells-training-card-dm>
+        <cells-traing-tsec-dm></cells-traing-tsec-dm>
+
+        <bbva-button-default>Get Cards</bbva-button-default>
+
+        <script>
+      
+          const cards = document.querySelector('cells-training-card-dm');
+      
+          const button = document.querySelector('bbva-button-default');
+
+          const tsec = document.querySelector('cells-traing-tsec-dm');
+
+          tsec.host = 'https://artichoke.platform.bbva.com';
+          tsec.country = 'co';
+          tsec.user = '1234567890';
+          tsec.password = '112233';
+          tsec.consumerId = '10000003';
+
+          cards.host = 'https://artichoke.platform.bbva.com';
+          cards.version = '0';
+          cards._token = '9076bca6b41a498a93bbe35182ca3821c0aa19cb';
+
+          button.addEventListener('click', () => {
+            tsec.Login();
+          });
+
+          tsec.addEventListener('login-tsec-success',() => {
+            cards.getCards();
+          });
+
+        </script>
+      </template>
+    </bbva-core-demo-case>
+  </bbva-core-demo-helper>
+</body>
+
 </html>
